removed commented JAVA_OPTS - it didn't help with the amd64 build on sonoma